# kafkacli

./: Cargo.toml  docker-compose.yml
src/: consume.rs  main.rs  schemas.rs
src/topics/: describe.rs  list.rs  mod.rs
