[package]
name = "kafkacli"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
atty = "0.2.14"
clap = "3.0.0-beta.4"
kafka = "0.8.0"
reqwest = { version = "0.11.4", features = ["blocking", "json"] }
serde =  { version = "1.0", features = ["derive"] }
serde_json = "1.0.68"
trait_enum = "0.5.0"
